Changing PRODUCTS_SERVICE_ID environment variable to SERVICE_ID to be similar to the services generated form the automatic service generator

--- a/products-service/Dockerfile
+++ b/products-service/Dockerfile
@@ -10,7 +10,7 @@ ENV DATABASE_USERNAME=root
 ENV DATABASE_PASSWORD=root
 ENV SINATRA_PORT=5000
 ENV CONSUL_URL=http://172.17.0.2:8500
-ENV PRODUCTS_SERVICE_ID=1
+ENV SERVICE_ID=1
 
 RUN apt-get update &\
     apt-get upgrade
